--- a/seata-storage-service2002/src/main/resources/application.yml
+++ b/seata-storage-service2002/src/main/resources/application.yml
@@ -34,7 +34,7 @@ seata:
   service:
     vgroup-mapping:
       default_tx_group: default # 事务组与TC服务集群的映射关系
-  data-source-proxy-mode: AT
+  data-source-proxy-mode: XA
 
 logging:
   level:
