--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>seata-order-service2001</module>
         <module>seata-storage-service2002</module>
         <module>seata-account-service2003</module>
+        <module>acid-nine-noable</module>
     </modules>
 
     <properties>
