--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>seata-storage-service2002</module>
         <module>seata-account-service2003</module>
         <module>acid-nine-noable</module>
+        <module>snow</module>
     </modules>
 
     <properties>
